a1/brendan_gordon/TEST_PROGRAMS/invalidtype/anderson_santossilva/variableNotDeclared.min
var x: int;
var y: float;

print x + y + z;

